# vAmigaImgui

./: .gitmodules  CMakeLists.txt  README.md
LinuxGUI/: CMakeLists.txt  application.cc  application.h  constants.h  gui_constants.h
LinuxGUI/components/: console.cc  console.h  dashboard.h  disk_creator.cc  disk_creator.h  disk_inspector.h  file_picker.cc  input_manager.cc  input_manager.h  inspector.cc  inspector.h  logic_analyzer.cc  logic_analyzer.h  settings_window.cc  settings_window.h  video_window.cc  video_window.h  virtual_keyboard.cc  virtual_keyboard.h  volume_inspector.cc  volume_inspector.h
LinuxGUI/resources/: IconsFontAwesome6.h  generate_header.py
LinuxGUI/services/: config_provider.cc  config_provider.h
LinuxGUI/tests/: config_provider_test.cc
src/: CMakeLists.txt  application.cc  compat.h  core_actions.h
src/components/: dashboard.cc  dashboard.h  disk_creator.h  disk_inspector.cc  disk_inspector.h  file_picker.h  hard_disk_creator.cc  hard_disk_creator.h  inspector.h  settings_window.cc  video_window.h  virtual_keyboard.h  volume_inspector.cc  volume_inspector.h
src/resources/: font_awesome.h
src/services/: config_provider.cc  config_provider.h
src/tests/: config_provider_test.cc  hard_disk_creator_test.cc  smoke_test.cc
